fixed header links alignment, header logo size

--- a/style.css
+++ b/style.css
@@ -31,12 +31,19 @@ img {
     color: #FFF;
     display: flex;
     flex-direction: column;
+    align-items: space-between;
 
 }
 
+.logo {
+    font-size:40px;
+}
+
 .nav {
+    font-size: 20px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding-bottom: 70px;
 }
 
@@ -45,6 +52,7 @@ img {
     justify-content: center;
     align-items: center;
     gap: 40px;
+    padding-bottom: 15px;
 }
 
 .herotext {
